# llama-stack-demos

./: .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_QUALITY.md  Makefile  README-tkn-scripts.md  README.md  agent-system-buildconfig.yaml  configure-workflows.sh  deploy-complete-system.sh  deploy-enhanced-workspace.sh  deploy-to-openshift.sh  deploy_tekton_integration.sh  deploy_tekton_resources.sh  docker-compose.yml  external_sources_demo.py  kustomization.yaml  llama_stack_config.yaml  local_setup_guide.md  monitor-pipeline-tkn.sh  monitoring_system_demo.py  package-lock.json  package.json  pyproject.toml  pytest.ini  rebuild-agents-for-workspace.sh  requirements.txt  research.md  run_tests.sh  setup-gitea-repos.sh  showroom_integration_demo.py  start-agents-with-a2a.sh  test-complete-git-workflow.py  test-enhanced-workspace-pipelinerun.yaml  test-enhanced-workspace-tkn.sh  test-openshift-deployment.py  test-rag-content-quality-local.sh  test-template-converter-task.yaml  (+21 more)
.github/workflows/: lab-test.yaml  llama-stack-build.yaml  mcp-builds.yaml  pre-commit.yaml
app/src/: 3_simple_agent_with_githubmcp.py  streamlit_app.py
base/: agents-deployment.yaml
common/: __init__.py  client.py  types.py
common/server/: __init__.py  server.py  task_manager.py  utils.py
demos/a2a_llama_stack/: A2AFleet.py  A2ATool.py  README.md  __main__.py  agent.py  demo.py  requirements.txt  task_manager.py
demos/rag_agentic/: README.md
demos/rag_eval/: Agentic_RAG_with_reference_eval.ipynb
demos/workshop_template_system/: __init__.py  __main__.py  requirements.txt  task_manager.py
distribution/: README.md  build-external-provider.yaml  build.yaml
distribution/remote-vllm-granite-embedding/: README.md  build.yaml  run.yaml
docs/: COMPLETION_STATUS_REPORT.md  DEPLOYMENT_PROGRESS_DASHBOARD.md  README.md  TEKTON_TESTING_PLAN.md  TODO.md  a2a_architecture_analysis.md  a2a_howto_workshop_agents.md  a2a_reference_config_schema.md  a2a_tutorial_getting_started.md  frontend-api-endpoints.md  workspace-storage-requirements.md
docs/adr/: 0001-workshop-template-strategy.md  0002-human-in-the-loop-agent-integration.md  0003-agent-pipeline-integration.md  0004-ddd-frontend-backend-integration.md  0005-end-to-end-python-testing-workflow.md  0006-tekton-agent-integration-architecture.md  ADR-0010-workspace-tool-implementation.md  ADR-0015-workshop-chat-agent.md  ADR-0019-research-validation-agent.md  ADR-0020-documentation-pipeline-agent.md  ADR-0021-human-in-the-loop-integration.md  ADR-0022-rag-system-integration.md  ADR-0023-openshift-deployment-strategy.md  ADR-0024-workshop-monitoring-service-architecture.md  ADR-0025-kubernetes-deployment-architecture.md  ADR-0026-llm-infrastructure-architecture.md  ADR-0028-mcp-server-integration-architecture.md  ADR-0030-source-manager-agent.md  ADR-INDEX.md
docs/adrs/: 0001-workshop-template-strategy.md  0003-agent-pipeline-integration.md  0005-end-to-end-python-testing-workflow.md  0006-tekton-agent-integration-architecture.md  ADR-0007-shared-workspace-strategy.md  ADR-0008-shared-pvc-implementation.md  ADR-0013-frontend-architecture.md  ADR-0014-chat-api-service.md  ADR-0016-template-converter-agent.md  ADR-0017-content-creator-agent.md  ADR-0018-quarkus-middleware-architecture.md  ADR-0025-repository-cloning-agent.md  ADR-0027-safety-content-moderation-architecture.md  ADR-0029-multi-workshop-deployment-strategy.md  ADR-0030-source-manager-agent.md  ADR-0031-local-development-architecture.md  ADR-0032-pipeline-failure-recovery-strategy.md  ADR-0033-container-image-management-strategy.md  ADR-0034-agent-health-monitoring-strategy.md  ADR-0035-deployment-progress-tracking-strategy.md  ADR-0036-pipeline-parameter-validation-standards.md  ADR-0037-workflow-safety-rules.md  ADR-0038-implementation-reality-check.md  ADR-DEVELOPMENT-RULES.md  ARCHITECTURE-OVERVIEW-MAP.md  README.md
docs/explanation/: architecture.md  workflows.md
docs/guides/: local-testing-workflow.md  tekton-pipeline-testing-workflow.md
docs/how-to/: deploy-complete-system.md  deploy-github-pages.md  image-build-support.md
docs/prd/: workshop-template-system-frontend-prd.md
docs/reference/: configuration.md  deployment.md  pipeline-parameters.md  troubleshooting.md
docs/research/: developer-workflow-gaps-research-2025-01-04.md  human-in-the-loop-agent-analysis.md  openshift-multi-agent-deployment-patterns.md  pipeline-parameter-validation-research-2025-01-04.md  rag-enabled-human-oversight-analysis.md
docs/tutorials/: original-content-workshops.md  python-workshop-deployment.md  repository-based-workshops.md
kubernetes/: README.md  kustomization.yaml
kubernetes/argo-app-sets/: appset.yaml  (+2 more)
rules/: dynamic-tkn-parameter-rules.json  git-build-workflow-safety-rules.json  local-testing-rules.json
scripts/: compare_workshop_repositories.py  deploy-evolution-engine.sh  generate-tkn-from-middleware.sh  local-test-before-deploy.sh  run-pipeline-with-config.sh  start-rag-stack-local.sh  stop-rag-stack-local.sh  test-agent-fixes.sh  test_adr_compliance_cycle.py  test_local_with_gitea.py  test_openshift_apis.py  update-gitea-credentials.sh  validate-workflow.sh
tests/: conftest.py  model_analysis.ipynb  requirements.txt  test_mcp_servers.py  tests.py  util.py
workshop-monitoring-service/: .dockerignore  Dockerfile  MONITORING_README.md  README.md  build-container.sh  build-frontend.sh  pom.xml
(+475 files in other folders)
